<resources>
    <string name="app_name">YourDestiny</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="title_guides">Гайды</string>
    <string name="title_collection">Коллекция</string>
    <string name="title_buildcraft">BuildCraft</string>
    <string name="title_triumph">Триумфы</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>