<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/raid_complex_3"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/vault2_2"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/meditations_2"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_2"
        android:icon="@drawable/quest_flag_2"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_3"
        android:icon="@drawable/ghost_2"
        android:title="@string/title_notifications" />

</menu>