<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_guides">

    <fragment
        android:id="@+id/navigation_guides"
        android:name="com.example.yourdestiny.view.ui.guides.GuidesFragment"
        android:label="@string/title_guides"
        tools:layout="@layout/fragment_guides" />

    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.example.yourdestiny.view.ui.collection.CollectionFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/navigation_buildcraft"
        android:name="com.example.yourdestiny.view.ui.buildcraft.BuildCraftFragment"
        android:label="@string/title_buildcraft"
        tools:layout="@layout/fragment_buildcraft" />
</navigation>